2012-09-26  Danilo Cesar Lemes de Paula  <danilo.cesar@collabora.co.uk>

        [gtk] adding methods and signals for usermedia communication between webkit and browser
        https://bugs.webkit.org/show_bug.cgi?id=94373

        When the user make a getUserMedia call, webview will emit a sigial (user-media-requested)
        to the application containing then request itself (webkitwebusermediarequest) and two
        list with the available audio and video devices (webkitwebusermedialist).

        The application must show the list to the user and ask permission to use one of
        those devices (or reject the request).

        In case the user accepts the request, the application must mark the device as
        selected (using webkit_web_user_media_list_select_item) and then call
        webkit_web_view_accept_user_media_request which will handle the request properly

        Reviewed by NOBODY (OOPS!).


        * GNUmakefile.am:
        * docs/webkitgtk-docs.sgml:
        * docs/webkitgtk-sections.txt:
        * webkit/webkit.h:
        * webkit/webkitwebusermedialist.cpp: Added.
        (_WebKitWebUserMediaListPrivate):
        (webkitWebUserMediaListDispose):
        (webkitWebUserMediaListFinalize):
        (webkit_web_user_media_list_class_init):
        (webkit_web_user_media_list_init):
        (webkit_web_user_media_list_get_length):
        (webkit_web_user_media_list_get_item_name):
        (webkit_web_user_media_list_is_item_selected):
        (webkit_web_user_media_list_select_item):
        (WebKit):
        (WebKit::core):
        (WebKit::kitNew):
        * webkit/webkitwebusermedialist.h: Added.
        (_WebKitWebUserMediaList):
        (_WebKitWebUserMediaListClass):
        * webkit/webkitwebusermedialistprivate.h: Added.
        (WebKit):
        * webkit/webkitwebusermediarequest.cpp: Added.
        (_WebKitWebUserMediaRequestPrivate):
        (webkitWebUserMediaRequestFinalize):
        (webkit_web_user_media_request_class_init):