@@ -1,4 +1,4 @@
-2012-09-26  Danilo Cesar Lemes de Paula  <danilo.cesar@collabora.co.uk>
+2012-09-28  Danilo Cesar Lemes de Paula  <danilo.cesar@collabora.co.uk>
 
         [gtk] adding methods and signals for usermedia communication between webkit and browser
         https://bugs.webkit.org/show_bug.cgi?id=94373
@@ -16,8 +16,15 @@
 
         Reviewed by NOBODY (OOPS!).
 
-
         * GNUmakefile.am:
+        * WebCoreSupport/UserMediaClientGtk.cpp:
+        (WebKit::UserMediaClientGtk::UserMediaClientGtk):
+        (WebKit::UserMediaClientGtk::pageDestroyed):
+        (WebKit::UserMediaClientGtk::requestUserMedia):
+        (WebKit::UserMediaClientGtk::cancelUserMediaRequest):
+        * WebCoreSupport/UserMediaClientGtk.h:
+        (WebCore):
+        (UserMediaClientGtk):
         * docs/webkitgtk-docs.sgml:
         * docs/webkitgtk-sections.txt:
         * webkit/webkit.h:
@@ -58,6 +65,7 @@
         (WebKit):
         * webkit/webkitwebview.cpp:
         (webkit_web_view_class_init):
+        (webkit_web_view_init):
         (webkit_web_view_accept_user_media_request):
         (webkit_web_view_reject_user_media_request):
         * webkit/webkitwebview.h:
